vcluster_versioned_docs/version-0.33.0/configure/vcluster-yaml/snapshots.mdx
---
title: Snapshots
sidebar_label: snapshots
sidebar_position: 8
sidebar_class_name: pro host-nodes
description: Learn how to configure automatic snapshots.
---
import ProAdmonition from '../../_partials/admonitions/pro-admonition.mdx'
import Snapshots from '../../_partials/config/snapshots.mdx'
import TenancySupport from '../../_fragments/tenancy-support.mdx';
import SnapshotsS3AWS from '../../_fragments/snapshots-s3-aws.mdx'
import SnapshotsOCI from '../../_fragments/snapshots-oci.mdx'
import Button from "@site/src/components/Button";
import Expander from "@site/src/components/Expander";
import Flow, { Step } from "@site/src/components/Flow";
import Label from "@site/src/components/Label";
import NavStep from "@site/src/components/NavStep";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="scheduled-snapshots" />

<TenancySupport hostNodes="true" />

<ProAdmonition />

# Snapshots

vCluster Platform allows you to configure taking snapshots of the vCluster at specific intervals.

:::info Manual snapshots with the vCluster CLI
For on-demand snapshot creation and restore operations, see the [vCluster Snapshot and Restore](/docs/vcluster/manage/backup-restore/backup) documentation.
:::

This allows administrators to capture and store the vCluster state in scheduled intervals to help protect
against infrastructure failures, data corruption, and configuration errors. By maintaining consistent
recovery points, administrators can quickly restore the vCluster to a known good state without relying on manual backup processes.
For more details on how snapshots work, refer to the documentation in the [Snapshot and Restore](/vcluster/manage/backup-restore/volume-snapshots/setup) section.

In the `vcluster.yaml`, it is configured under `snapshots`. Using the UI, you
can configure the management of snapshots in the config options of a virtual cluster under **Snapshots**. Though
snapshot configuration is configured on the virtual cluster itself, the capability and logic of scheduling snapshots
is in vCluster Platform.

:::note
Auto Snapshot is supported from platform version 4.4.0 onward and is currently in Beta.
:::

:::note
Volume Snapshot is currently in beta. Support is available from vCluster version 0.30 and beyond, and Platform version 4.5 and beyond.
:::

## Configure

<Tabs
  defaultValue="yaml"
  values={[
    { label: "vcluster.yaml", value: "yaml" },
    { label: "vCluster CLI", value: "cli" },
    { label: "Platform UI", value: "ui" },
  ]}
>
<TabItem value="yaml">

### Enable auto snapshots

To enable auto snapshots, add the following configuration to your `vcluster.yaml`:

```yaml title="Auto Snapshots configuration"
snapshots:
  auto:
    # Take a snapshot every 12 hours
    schedule: 0 */12 * * *
    # Default is UTC
    # Options are at https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
    timezone: America/New_York
    retention:
      period: 30
      maxSnapshots: 14
    storage:
      type: s3
      s3:
        url: s3://my-bucket/path
    # Enables snapshots for PVCs that are provisioned by CSI drivers
    volumes:
      enabled: true
```

:::warning
In order to create volume snapshots, several installation and configuration steps have to be done in your host or virtual cluster.
Check the [Volume Snapshot](/vcluster/manage/backup-restore/volume-snapshots/setup) documentation page to learn more about getting your cluster ready for snapshotting volumes
:::

### AWS S3 bucket example

Snapshots can be stored in an AWS S3 bucket.

<details>
<summary>Configure snapshots with AWS S3</summary>
<SnapshotsS3AWS />
</details>

### OCI image registries
<details>
<summary>Configure snapshots with OCI</summary>
<SnapshotsOCI />
</details>

</TabItem>

<TabItem value="cli">

### Create an OCI snapshot (Helm driver)

For virtual clusters deployed with the Helm driver (without platform):

```bash
vcluster snapshot create VCLUSTER_NAME --namespace NAMESPACE oci://ghcr.io/my-user/my-repo:my-tag
```

This will take a snapshot of the virtual cluster and saves it as an OCI image.

### Create an AWS S3 snapshot (Helm driver)

For virtual clusters deployed with the Helm driver (without platform):

```bash
vcluster snapshot create VCLUSTER_NAME --namespace NAMESPACE s3://my-bucket/my-bucket-key
```

This will take a snapshot of the virtual cluster and saves it to a AWS S3 bucket.

:::info
There might be additional enryption settings necessary for AWS, which can be configured with following flags:
- --customer-key-encryption-file
- --kms-key-id
- --server-side-encryption
:::

### Create a container filesystem snapshot (Helm driver)

For virtual clusters deployed with the Helm driver (without platform):

```bash
vcluster snapshot create VCLUSTER_NAME --namespace NAMESPACE container:///data/my-local-snapshot.tar.gz
```

This will take a snapshot of the virtual cluster to the vCluster container filesystem.

</TabItem>

<TabItem value="ui">

<Flow id="vcluster-prevent-deletion-ui">
  <Step>
    From the project drop-down menu (top left corner), select the project you'd like to create the
    virtual cluster in.
  </Step>
  <Step>
    Click on <NavStep>Virtual Clusters</NavStep>.
  </Step>
  <Step>
    Click on <Label>Edit</Label> on the virtual cluster that you want to edit.
  </Step>
  <Step>
    Select the <Expander>Snapshots</Expander> expander, toggle the <Label>Enable Snapshots</Label> slider to enable auto snapshots and configure accordingly.
  </Step>

<Step>
  Click on the <Button>Save</Button> button to save the changes.
</Step>

</Flow>
</TabItem>

</Tabs>

## Config reference

<Snapshots />
